# financial-qa-agent

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docs/: instructions.md
frontend/: app.js  index.html  style.css
specs/: agent.md  api.md  architecture.md
src/financial_qa_agent/: agent.py  config.py  main.py  models.py
src/financial_qa_agent/tools/: __init__.py  fundamental_data.py  knowledge_base.py  market_data.py  news_search.py
tests/: conftest.py  test_agent.py  test_api.py  test_models.py  test_tools.py
